ingress/hello-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    type: application
spec:
  selector:
    matchLabels:
      type: hello-app
      service: application
  template:
    metadata:
      labels:
        type: hello-app
        service: application
    spec:
      containers:
      - name: hello-app
        image: hello:v1
        imagePullPolicy: Never

---

apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    type: hello-app
    service: application
