ingress/hello-ingress-default.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  backend:
    serviceName: hello
    servicePort: 80
