ingress/hello-ingress-domain.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: hello-app.com
    http:
      paths:
      - backend:
          serviceName: hello
          servicePort: 80
